@@ -181,6 +181,7 @@ enum class ReaderPostCardActionType {
     REBLOG,
     COMMENTS,
     REPORT_POST,
+    REPORT_USER,
     TOGGLE_SEEN_STATUS,
     SPACER_NO_ACTION
 }
