@@ -14,6 +14,7 @@ import org.wordpress.android.ui.reader.discover.ReaderPostCardActionType.BLOCK_S
 import org.wordpress.android.ui.reader.discover.ReaderPostCardActionType.BLOCK_USER
 import org.wordpress.android.ui.reader.discover.ReaderPostCardActionType.FOLLOW
 import org.wordpress.android.ui.reader.discover.ReaderPostCardActionType.REPORT_POST
+import org.wordpress.android.ui.reader.discover.ReaderPostCardActionType.REPORT_USER
 import org.wordpress.android.ui.reader.discover.ReaderPostCardActionType.SHARE
 import org.wordpress.android.ui.reader.discover.ReaderPostCardActionType.SITE_NOTIFICATIONS
 import org.wordpress.android.ui.reader.discover.ReaderPostCardActionType.TOGGLE_SEEN_STATUS
@@ -56,6 +57,7 @@ class ReaderPostMoreButtonUiStateBuilder @Inject constructor(
         menuItems.add(SpacerNoAction())
         menuItems.add(buildBlockSite(onButtonClicked))
         menuItems.add(buildReportPost(onButtonClicked))
+        menuItems.add(buildReportUser(onButtonClicked))
         checkAndAddMenuItemForBlockUser(menuItems, onButtonClicked)
 
         return menuItems
@@ -212,7 +214,17 @@ class ReaderPostMoreButtonUiStateBuilder @Inject constructor(
                     type = REPORT_POST,
                     label = UiStringRes(R.string.reader_menu_report_post),
                     labelColor = R.attr.wpColorError,
-                    iconRes = R.drawable.ic_block_white_24dp,
+                    iconRes = R.drawable.ic_flag_white_24dp,
+                    iconColor = R.attr.wpColorError,
+                    onClicked = onButtonClicked
+            )
+
+    private fun buildReportUser(onButtonClicked: (Long, Long, ReaderPostCardActionType) -> Unit) =
+            SecondaryAction(
+                    type = REPORT_USER,
+                    label = UiStringRes(R.string.reader_menu_report_user),
+                    labelColor = R.attr.wpColorError,
+                    iconRes = R.drawable.ic_flag_white_24dp,
                     iconColor = R.attr.wpColorError,
                     onClicked = onButtonClicked
             )
