@@ -20,6 +20,7 @@ import org.wordpress.android.ui.reader.discover.ReaderPostCardActionType.FOLLOW
 import org.wordpress.android.ui.reader.discover.ReaderPostCardActionType.LIKE
 import org.wordpress.android.ui.reader.discover.ReaderPostCardActionType.REBLOG
 import org.wordpress.android.ui.reader.discover.ReaderPostCardActionType.REPORT_POST
+import org.wordpress.android.ui.reader.discover.ReaderPostCardActionType.REPORT_USER
 import org.wordpress.android.ui.reader.discover.ReaderPostCardActionType.SITE_NOTIFICATIONS
 import org.wordpress.android.ui.reader.discover.ReaderPostCardActionType.TOGGLE_SEEN_STATUS
 import org.wordpress.android.ui.reader.discover.ReaderPostCardActionsHandler
@@ -233,6 +234,21 @@ class ReaderPostListViewModel @Inject constructor(
             readerPostCardActionsHandler.onAction(
                     post,
                     REPORT_POST,
+                    bookmarksList,
+                    source = source
+            )
+        }
+    }
+
+    fun onReportUserButtonClicked(
+        post: ReaderPost,
+        bookmarksList: Boolean,
+        source: String
+    ) {
+        launch(bgDispatcher) {
+            readerPostCardActionsHandler.onAction(
+                    post,
+                    REPORT_USER,
                     bookmarksList,
                     source = source
             )
