@@ -1,0 +1,13 @@
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportHeight="24"
+    android:viewportWidth="24">
+    <group>
+        <clip-path android:pathData="M14.4,6L14,4H5V21H7V14H12.6L13,16H20V6H14.4Z" />
+        <path
+            android:fillColor="@android:color/white"
+            android:pathData="M0,0h24v24h-24z" />
+    </group>
+</vector>
