@@ -776,6 +776,7 @@ public final class AnalyticsTracker {
         ENCRYPTED_LOGGING_UPLOAD_SUCCESSFUL,
         ENCRYPTED_LOGGING_UPLOAD_FAILED,
         READER_POST_REPORTED,
+        READER_USER_REPORTED,
         READER_POST_MARKED_AS_SEEN,
         READER_POST_MARKED_AS_UNSEEN,
         SUGGESTION_SESSION_FINISHED,
